[listeners] fix listener loading method